Bug 821717: Table headers in the "Saved Searches" and "Email Prefs" panels are wrongly right-aligned r/a=LpSolit

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -354,6 +354,11 @@ table#flags td {
     text-align: left;
 }
 
+table#email_prefs th,
+table#shared_search_prefs th,
+table#saved_search_prefs th {
+    text-align: center;
+}
 .flag_select {
     min-width: 3em;
 }
